# rust-openapi-sdk

./: Cargo.toml  README.md
src/: client.rs  main.rs
